# piano-tiles

./: CMakeLists.txt  Makefile  README.md  beatmap.c  beatmap.h  bin  game.c  game.h  gamemap.h  leaderboard  main.c  menus.c  menus.h  option red.xcf  stack.c  stack.h  utilities.c  utilities.h
